# fps-ai

./: .gitignore  INTEGRATION.md  README.md  build.sh  cleanup-hid.sh  setup-hid.sh  test-demo.sh
docs/: hdmi-in-config.md  rk3588-config.md
integration/: README-game-control.md  full_pipeline.py  game_control.py
src/: CMakeLists.txt
src/capture/: v4l2_capture.cpp  v4l2_capture.h
src/hid/: Makefile  hid_common.h  keyboard.c  mouse.c  mouse_absolute.c
src/preview/: drm_preview.cpp  drm_preview.h
src/rknn/: yolov8_pose.cpp  yolov8_pose.h
